working on login page

--- a/login_page.html
+++ b/login_page.html
@@ -1,5 +1,20 @@
-<form method="post" action="login_page.php">
-<input type="text" name="username" placeholder="Enter Username">
-<input type="password" name="password" placeholder="Enter Password">
-<input type="submit" name="submit-btn" value="submit">
-</form >
+<html>
+ <head>
+
+ </head>
+
+ <body>
+    <h1>Login Page</h1>
+
+
+
+ </body>
+
+
+</html>
+
+    <form method="post" action="login_page.php">
+    <input type="text" name="username" placeholder="Enter Username">
+    <input type="password" name="password" placeholder="Enter Password">
+    <input type="submit" name="submit-btn" value="submit">
+    </form >
