--- a/company_info_page_josie_v1.html
+++ b/company_info_page_josie_v1.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-  <link rel="stylesheet" href="template/apex_charts_material/assets/styles.css" />  <!-- general css style -->
+  <link rel="stylesheet" href="styles.css" />  <!-- general css style -->
 
   <script src="https://cdn.plot.ly/plotly-2.35.2.min.js" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/chart.umd.min.js"></script>
