--- a/disruptions_events_josie.html
+++ b/disruptions_events_josie.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
-  <link rel="stylesheet" href="template/apex_charts_material/assets/styles.css?v=3" />  <!-- general css style -->
+  <link rel="stylesheet" href="styles.css?v=3" />  <!-- general css style -->
 
   <script src="https://cdn.plot.ly/plotly-3.3.0.min.js" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/chart.umd.min.js"></script>
